Align manual refresh & fix top right/left border issues

--- a/src/client/components/Sidebar/InterestingPeople.less
+++ b/src/client/components/Sidebar/InterestingPeople.less
@@ -2,8 +2,7 @@
 
 .InterestingPeople__icon-refresh {
   font-size: 22px !important;
-  float: right;
-  margin-top: 5px;
+  margin-left: auto;
   cursor: pointer;
 }
 
