--- a/src/client/components/Sidebar/SidebarContentBlock.less
+++ b/src/client/components/Sidebar/SidebarContentBlock.less
@@ -8,8 +8,12 @@
   padding-bottom: 16px;
 
   &__title {
+    display: flex;
+    align-items: center;
     background-color: @white-darker;
     border-bottom: 1px solid @white-gainsboro;
+    border-top-right-radius: @border-radius-base;
+    border-top-left-radius: @border-radius-base;
     margin-bottom: 12px;
     color: @blue-baliHai;
     font-size: 16px;
